# GeodesicParams

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  geodesicparams.ellipsefitting.direct_ellipse_fitting.rst  geodesicparams.ellipsefitting.ellipse_3d.rst  geodesicparams.ellipsefitting.guaranteed_AML_ellipse_fit.rst  geodesicparams.riemannsurfaces.integrations.rst  geodesicparams.riemannsurfaces.period_matrices.rst  geodesicparams.rst  index.rst
docs/source/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_build/.doctrees/: environment.pickle  index.doctree
geodesicparams/: setup.py
geodesicparams/src/: __init__.py
geodesicparams/src/geodesicparams/ellipsefitting/: __init__.py  matrix_functions.py
geodesicparams/src/geodesicparams/riemannsurfaces/: __init__.py
geodesicparams/src/geodesicparams/solvegeodesics/: __init__.py  solve_eom.py  substitution.py
src/geodesicparams/: __init__.py  fit_geodesic.py  utilities.py
src/geodesicparams/ellipsefitting/: matrix_functions.py
src/geodesicparams/ellipsefitting/direct_ellipse_fitting/: __init__.py  direct_ellipse_estimates.py  ellipse_fit.py
src/geodesicparams/geodesicfitting/: __init__.py  coordinates.py  fit_geodesic.py  mcmc_analysis.py  orbital_conversions.py
src/geodesicparams/solvegeodesics/: general_relativity.py  solve_eom.py  solve_geodesics.py  substitution.py
tests/: demo.py  fitting.py
tests/temp/: rdata_2024-04-15_11-33-14.npy
uniform/: fitting.py
uniform/temp/: thetadata_2024-04-15_11-33-14.pickle
(+28 files in other folders)
