[tool.poetry]
name = "geodesicparams"
version = "0.2.0"
description = "A python package for determining the astrophysical parameters of a body in Plebański-Demiański spacetimes."
authors = ["Alexander Abesteh <alexabesteh@gmail.com>"]
readme = "README.md"
packages = [{include = "geodesicparams", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
mpmath = "^1.3.0"
sympy = "^1.13.0"
numpy = "^2.0.0"
scipy = "^1.14.0"
emcee = "^3.1.6"
lmfit = "^1.3.1"

[tool.poetry.group.test.dependencies]
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
